cabal-version:      2.4
name:               brick-game-gloss
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             SolidSnake
maintainer:         solid@snake

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules: Animation,
                     Animation.State,
                     Animation.Type,
                     Animation.Render,
                     Animation.Env

    build-depends: base,
                   random,
                   containers,
                   gloss

    hs-source-dirs: lib
    default-language: Haskell2010

executable brick-game-gloss
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.1.0,
                      brick-game-gloss,
                      text,
                      gloss
                      
    hs-source-dirs:   app
    default-language: Haskell2010
